Applying changes suggested by static analysis/lint
SonarQube ruleset for HaV (issues remain)